@@ -57,15 +57,36 @@ DO(0 == sapply(1:100, function(n)
 
 ###----  Strict tests of adjOutlyingness():
 
-
+## works for this (!) seed:
 set.seed(1); system.time(a1 <- adjOutlyingness(longley))
 set.seed(2); system.time(a2 <- adjOutlyingness(hbk))
 set.seed(3); system.time(a3 <- adjOutlyingness(hbk[, 1:3]))# the 'X' space
 set.seed(4); system.time(a4 <- adjOutlyingness(milk))
 set.seed(5); system.time(a5 <- adjOutlyingness(wood))
-set.seed(5); system.time(a5 <- adjOutlyingness(wood[, 1:5]))# the 'X' space
+set.seed(6); system.time(a6 <- adjOutlyingness(wood[, 1:5]))# the 'X' space
 
-## Not yet strict checking;  the results are currently  *very* doubtful!
+stopifnot(which(!a2$nonOut) == 1:14,
+	  which(!a3$nonOut) == 1:14,
+	  which(!a4$nonOut) == c(1, 2, 41, 70),
+	  ## 'longley', 'wood' have no outliers in the "adjOut" sense:
+	  a1$nonOut, a5$nonOut, a6$nonOut,
+          ## milk (n = 86) :
+          rank(a4$adjout) ==
+          c(83, 85, 59, 62, 11,   26, 27, 15, 43, 24,   73, 82, 78, 79, 81,
+            76, 77, 63, 72, 68,   30, 11, 36, 18, 56,  47.5, 51, 65, 49, 14,
+            42, 55,  6, 16, 22,   41, 40, 29, 11, 53,   84, 67, 46, 80, 11,
+            11, 75, 70, 69, 64,   52, 66, 35,  5,  3,    1, 33, 23, 47.5, 17,
+            4, 50, 38.5,38.5,31,  20,  7, 57, 37, 86,   34, 25, 44, 71, 74,
+            21, 58,  2, 28, 32,    8, 19, 60, 61, 45,   54),
+          ## hbk (n = 75) :
+          rank(a3$adjout) ==
+          c(62, 64, 68, 71, 70,   65, 66, 63, 69, 67,   73, 75, 72, 74, 18,
+            52, 44,  4, 12, 24,    6, 24, 15, 24, 59,   14, 24, 16, 45, 39,
+            49, 33,  9, 54, 24,    2, 24, 50, 56, 10,   32, 41, 43, 37, 60,
+            36, 61, 24, 13, 11,   48, 55, 47, 42, 17,   30, 51, 24,  7, 38,
+            24, 58, 40, 24, 24,   34,  3, 53, 57,  5,    1,  8, 31, 35, 46)
+          )
+
 
 
 ### Some platform info :
